--- a/ui/scss/init/_color.scss
+++ b/ui/scss/init/_color.scss
@@ -45,18 +45,6 @@
   --color-link: var(--color-primary);
   --color-link-hover: var(--color-black);
 
-  // Input
-  --color-input-color: #111111;
-  --color-input-label: var(--color-gray-5);
-  --color-input-placeholder: #212529;
-  --color-input-bg: var(--color-gray-1);
-  --color-input-bg-copyable: #434b53;
-  --color-input-border: var(--color-border);
-  --color-input-border-active: var(--color-secondary);
-  --color-input-toggle: var(--color-secondary);
-  --color-input-toggle-bg: var(--color-gray-1);
-  --color-input-toggle-bg-hover: var(--color-secondary-alt);
-
   // Table
   --color-table-highlight: var(--color-white-alt);
 
